added conter value post

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 				<form action="" class="new-post__form">
 					<div class="input">
 						<input id="inputTitle" type="text" name="title" placeholder="Напиши заголовок поста" class="input__title" required tabindex="1">
-						<label id="inputTitleLengthCounter" class="input__title-length">0 из 100</label>
+						<label id="inputTitleLengthCounter" class="input__title-length"></label>
 						<textarea name="discription" id="inputDiscription" class="input__discription" placeholder="Напиши пост" required tabindex="2"></textarea>
-						<label id="inputDiscriptionLengthCounter" class="input__discription-length">0 из 200</label>
+						<label id="inputDiscriptionLengthCounter" class="input__discription-length"></label>
 					</div>
 				</form>
 				<div id="error" class="new-post__error">
