--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 	<meta name="Copyright" content="Denis A">
 	<meta name="Address" content="Санкт-Петербург">
 
+	<!--Политика 'interest-cohort' разрешений позволяет сайту заявить, что он не хочет быть включенным в список сайтов, на которых Google тестирует свою технологию FLoC (замена файлов cookie)-->
+	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+
+
 	<link rel="stylesheet" href="styles/style.css">
 	<title>Простой блог</title>
 	<link rel="shortcut icon" href="resourses/img/icon/favicon.ico"/>
